Update and rename untitled.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Нажми и я кончу...</h1>
     <audio id="prankSound" autoplay>
-      <source src="sound.mp3" type="audio/mpeg">
+      <source src="1050105547319.mp3" type="audio/mpeg">
     </audio>
     <script>
       document.body.addEventListener('click', function () {
